--- a/layout_files/HyperTension.kv
+++ b/layout_files/HyperTension.kv
@@ -4,7 +4,7 @@
     BoxLayout:
         orientation: 'vertical'
 
-        MDToolbar:
+        MDTopAppBar:
             title: hypertension_toolbar_title
             halign: 'left'
             left_action_items: [["chevron-left", lambda x: root.chevron_left()]]
@@ -56,7 +56,7 @@
     MDBoxLayout:
 
         orientation:'vertical'
-        MDToolbar:
+        MDTopAppBar:
             title: hypertension_toolbar_title
             # size_hint_y:0.1
             left_action_items: [["chevron-left", lambda x: root.chevron_left()]]
@@ -106,7 +106,7 @@
     score_label:score_label
     BoxLayout:
         orientation: 'vertical'
-        MDToolbar:
+        MDTopAppBar:
 
             title: hypertension_toolbar_title
             left_action_items: [["chevron-left", lambda x: root.chevron_left()]]
