--- a/layout_files/Loading.kv
+++ b/layout_files/Loading.kv
@@ -13,7 +13,7 @@
 
     # MDBoxLayout:
     #     orientation: 'vertical'
-    #     MDToolbar:
+    #     MDTopAppBar:
     #         title: ''
     #         halign: 'left'
     #         # left_action_items: [["chevron-left", lambda x: root.chevron_left()]]
