--- a/layout_files/Location.kv
+++ b/layout_files/Location.kv
@@ -2,7 +2,7 @@
     BoxLayout:
 
         orientation:'vertical'
-        MDToolbar:
+        MDTopAppBar:
             title: 'Location'
             # size_hint_y:0.1
             left_action_items: [["chevron-left", lambda x: root.chevron_left()]]
