--- a/layout_files/Login.kv
+++ b/layout_files/Login.kv
@@ -1,7 +1,7 @@
 <LoginPage>:
     BoxLayout:
         orientation: 'vertical'
-        MDToolbar:
+        MDTopAppBar:
             title: 'Account'
             left_action_items: [["chevron-left", lambda x: root.chevron_left()]]
             right_action_items: [["dots-vertical", lambda x:app.show_theme_picker()],["help", lambda x: root.tap_target_start()]]
