--- a/layout_files/Alcohol.kv
+++ b/layout_files/Alcohol.kv
@@ -11,7 +11,7 @@
 	BoxLayout:
 		orientation: 'vertical'
 
-		MDToolbar:
+		MDTopAppBar:
 			title: alcohol_toolbar_title
 			halign: 'left'
 			left_action_items: [["chevron-left", lambda x: root.chevron_left()]]
@@ -66,7 +66,7 @@
 <AlcoholUsagePage>:
 	BoxLayout:
 		orientation: 'vertical'
-		MDToolbar:
+		MDTopAppBar:
 			title: alcohol_toolbar_title
 			left_action_items: [["chevron-left", lambda x: root.chevron_left()]]
 			right_action_items: [["dots-vertical", lambda x:app.show_theme_picker()],["help", lambda x: root.tap_target_start()]]
@@ -83,6 +83,7 @@
 				on_tab_switch: root.on_tab_switch(*args)
 
 				Tab:
+					icon:'blank'
 					text:'1'
 					MDBoxLayout:
 						orientation:'vertical'
@@ -93,6 +94,7 @@
 							size_hint_x:0.9
 
 				Tab:
+					icon:'blank'
 					text:'2'
 					MDBoxLayout:
 						orientation:'vertical'
@@ -101,6 +103,7 @@
 							halign: 'center'
 							size_hint_x:0.9
 				Tab:
+					icon:'blank'
 					text:'3'
 					MDBoxLayout:
 						orientation:'vertical'
@@ -226,7 +229,7 @@
     score_label:score_label
     BoxLayout:
         orientation: 'vertical'
-        MDToolbar:
+        MDTopAppBar:
 
             title: alcohol_toolbar_title
             left_action_items: [["chevron-left", lambda x: root.chevron_left()]]
