--- a/layout_files/DepressionPage.kv
+++ b/layout_files/DepressionPage.kv
@@ -7,7 +7,7 @@
     BoxLayout:
         orientation: 'vertical'
 
-        MDToolbar:
+        MDTopAppBar:
             title: depression_toolbar_title
             halign: 'left'
             left_action_items: [["chevron-left", lambda x: root.chevron_left()]]
@@ -61,7 +61,7 @@
 <DepressionPage>:
     BoxLayout:
         orientation: 'vertical'
-        MDToolbar:
+        MDTopAppBar:
             title: depression_toolbar_title
             left_action_items: [["chevron-left", lambda x: root.chevron_left()]]
             right_action_items: [["dots-vertical", lambda x:app.show_theme_picker()],["help", lambda x: root.tap_target_start()]]
@@ -76,6 +76,7 @@
                 on_tab_switch: root.on_tab_switch(*args)
 
                 Tab:
+                    icon:'blank'
                     text:'1'
                     MDBoxLayout:
                         orientation:'vertical'
@@ -86,6 +87,7 @@
                             size_hint_x:0.9
 
                 Tab:
+                    icon:'blank'
                     text:'2'
                     MDBoxLayout:
                         orientation:'vertical'
@@ -182,7 +184,7 @@
     score_label:score_label
     BoxLayout:
         orientation: 'vertical'
-        MDToolbar:
+        MDTopAppBar:
 
             title: depression_toolbar_title
             left_action_items: [["chevron-left", lambda x: root.chevron_left()]]
