--- a/layout_files/Landing.kv
+++ b/layout_files/Landing.kv
@@ -66,7 +66,7 @@
             padding: dp(0), dp(0)
             spacing: dp(-10), dp(-10)
             size_hint_y: 0.5
-            font_name: '/Users/shivamkundan/Developer/HealthApp/scalasansot-cufonfonts/ScalaSansOT-Regular.otf'
+            # font_name: '/Users/shivamkundan/Developer/HealthApp/scalasansot-cufonfonts/ScalaSansOT-Regular.otf'
 
     MDNavigationLayout:
         nav_drawer:nav_drawer
@@ -77,7 +77,7 @@
                 MDBoxLayout:
                     orientation: 'vertical'
 
-                    MDToolbar:
+                    MDTopAppBar:
                         title: "Home"
                         canvas:
                             Rectangle:
