--- a/layout_files/PhysicalActivity.kv
+++ b/layout_files/PhysicalActivity.kv
@@ -7,7 +7,7 @@
     BoxLayout:
         orientation: 'vertical'
 
-        MDToolbar:
+        MDTopAppBar:
             title: physical_toolbar_title
             halign: 'left'
             left_action_items: [["chevron-left", lambda x: root.chevron_left()]]
@@ -61,7 +61,7 @@
 <PhysicalActivityPage>:
     BoxLayout:
         orientation: 'vertical'
-        MDToolbar:
+        MDTopAppBar:
             title: physical_toolbar_title
             left_action_items: [["chevron-left", lambda x: root.chevron_left()]]
             right_action_items: [["dots-vertical", lambda x:app.show_theme_picker()],["help", lambda x: root.tap_target_start()]]
@@ -79,6 +79,7 @@
 
                 Tab:
                     # tab_width:5
+                    icon:'blank'
                     text:'1'
                     MDBoxLayout:
                         orientation:'vertical'
@@ -116,6 +117,7 @@
                                 for i in [1,2,3,4,5,6,7,8,9,'/',0,'del']: txt = "{0}".format(i); self.add_widget(button.Button(text = txt,on_release=root.on_numpad_press))
 
                 Tab:
+                    icon:'blank'
                     text:'2'
                     MDBoxLayout:
                         orientation:'vertical'
@@ -180,7 +182,7 @@
     score_label:score_label
     BoxLayout:
         orientation: 'vertical'
-        MDToolbar:
+        MDTopAppBar:
 
             title: physical_toolbar_title
             left_action_items: [["chevron-left", lambda x: root.chevron_left()]]
