--- a/layout_files/TraumaticBrainInjury.kv
+++ b/layout_files/TraumaticBrainInjury.kv
@@ -14,7 +14,7 @@
     BoxLayout:
         orientation: 'vertical'
 
-        MDToolbar:
+        MDTopAppBar:
             title: trauma_toolbar_title
             halign: 'left'
             left_action_items: [["chevron-left", lambda x: root.chevron_left()]]
@@ -70,7 +70,7 @@
 <TraumaticBrainInjuryPage>:
     BoxLayout:
         orientation: 'vertical'
-        MDToolbar:
+        MDTopAppBar:
             title: trauma_toolbar_title
             left_action_items: [["chevron-left", lambda x: root.chevron_left()]]
             right_action_items: [["dots-vertical", lambda x:app.show_theme_picker()],["help", lambda x: root.tap_target_start()]]
@@ -84,6 +84,7 @@
                 on_tab_switch: root.on_tab_switch(*args)
 
                 Tab:
+                    icon:'blank'
                     text:'1'
                     MDBoxLayout:
                         orientation:'vertical'
@@ -94,6 +95,7 @@
                             size_hint_x:1
 
                 Tab:
+                    icon:'blank'
                     text:'2'
                     MDBoxLayout:
                         orientation:'vertical'
@@ -102,6 +104,7 @@
                             halign: 'center'
                             size_hint_x:0.9
                 Tab:
+                    icon:'blank'
                     text:'3'
                     MDBoxLayout:
                         orientation:'vertical'
@@ -111,6 +114,7 @@
                             size_hint_x:1
 
                 Tab:
+                    icon:'blank'
                     text:'4'
                     MDBoxLayout:
                         orientation:'vertical'
@@ -119,6 +123,7 @@
                             halign: 'center'
                             size_hint_x:0.9
                 Tab:
+                    icon:'blank'
                     text:'5'
                     MDBoxLayout:
                         orientation:'vertical'
@@ -164,7 +169,7 @@
     score_label:score_label
     BoxLayout:
         orientation: 'vertical'
-        MDToolbar:
+        MDTopAppBar:
 
             title: trauma_toolbar_title
             left_action_items: [["chevron-left", lambda x: root.chevron_left()]]
