--- a/layout_files/DepressionPage.kv
+++ b/layout_files/DepressionPage.kv
@@ -15,17 +15,17 @@
             # right_action_items: [["dots-vertical", lambda x: app.callback()], ["clock", lambda x: app.callback_2()]]
             elevation:8
 
-        MDLabel:
+        Label:
             text:''
             size_hint_y:0.3
-        MDLabel:
+        Label:
             text: 'Depression, defined as having little interest in doing things and feeling down/hopeless more often than not in a 2-week period, is linked to increased risk of Alzheimer\'s disease.'
             font_size:'14sp'
             halign: 'left'
             size_hint_x:0.8
             pos_hint:{'center_x':0.5}
 
-        MDLabel:
+        Label:
             # font_size:'2xw0sp'
             text: 'Answer the following questions about depression'
             # text_color:DARK_BLUE
@@ -41,7 +41,7 @@
             # size_hint_x:0.7
             pos_hint:{'center_x':0.5}
             on_release:
-                root.parent.ids['DepressionPage'].ids['android_tabs'].switch_tab('1')
+                # root.parent.ids['DepressionPage'].ids['android_tabs'].switch_tab('1')
                 root.arrow_right()
 
         BoxLayout:
@@ -55,7 +55,7 @@
                 size_hint_x:1
                 text:'                     >                       '
                 on_release:
-                    root.parent.ids['DepressionPage'].ids['android_tabs'].switch_tab('1')
+                    # root.parent.ids['DepressionPage'].ids['android_tabs'].switch_tab('1')
                     root.arrow_right()
 
 <DepressionPage>:
@@ -67,42 +67,40 @@
             right_action_items: [["dots-vertical", lambda x:app.show_theme_picker()],["help", lambda x: root.tap_target_start()]]
             elevation:8
 
-        MDBoxLayout:
-            size_hint_y:0.7
+        # BoxLayout:
+        #     size_hint_y:0.7
 
-            MDTabs:
-                id: android_tabs
-                tab_pos:'left_top'
-                on_tab_switch: root.on_tab_switch(*args)
+            # MDTabs:
+            #     id: android_tabs
+            #     tab_pos:'left_top'
+            #     on_tab_switch: root.on_tab_switch(*args)
 
-                Tab:
-                    icon:'blank'
-                    text:'1'
-                    MDBoxLayout:
-                        orientation:'vertical'
+            #     Tab:
+            #         icon:'blank'
+            #         text:'1'
+            #         BoxLayout:
+            #             orientation:'vertical'
 
-                        MDLabel:
-                            text: depression_Q1
-                            halign: 'center'
-                            size_hint_x:0.9
+            #             Label:
+            #                 text: depression_Q1
+            #                 halign: 'center'
+            #                 size_hint_x:0.9
 
-                Tab:
-                    icon:'blank'
-                    text:'2'
-                    MDBoxLayout:
-                        orientation:'vertical'
-                        MDLabel:
-                            text: depression_Q2
-                            halign: 'center'
-                            size_hint_x:0.9
+            #     Tab:
+            #         icon:'blank'
+            #         text:'2'
+            #         BoxLayout:
+            #             orientation:'vertical'
+            #             Label:
+            #                 text: depression_Q2
+            #                 halign: 'center'
+            #                 size_hint_x:0.9
 
         # MDGridLayout:
         #     cols:4
-        MDBoxLayout:
+        BoxLayout:
             orientation:'vertical'
             Button:
-            # MDRectangleFlatButton:
-                # id:button7
                 icon:'numeric-3'
                 text:'Not at all'
                 halign:'left'
@@ -114,7 +112,7 @@
 
                 on_release:
                     root.button_press(3)
-            MDLabel:
+            Label:
                 text:''
                 size_hint_y:0.05
             Button:
@@ -128,7 +126,7 @@
                 pos_hint:{'center_x':0.5}
                 on_release: root.button_press(2)
                 custom_color: 0, 1, 0, 1
-            MDLabel:
+            Label:
                 text:''
                 size_hint_y:0.05
             Button:
@@ -141,7 +139,7 @@
                 # size_hint_y:0.8
                 pos_hint:{'center_x':0.5}
                 on_release: root.button_press(1)
-            MDLabel:
+            Label:
                 text:''
                 size_hint_y:0.05
             Button:
@@ -153,7 +151,7 @@
                 font_style:'Button'
                 pos_hint:{'center_x':0.5}
                 on_release: root.button_press(0)
-            MDLabel:
+            Label:
                 text:''
                 size_hint_y:0.15
 
@@ -172,7 +170,7 @@
 
     FloatLayout:
         orientation: 'vertical'
-        MDLabel:
+        Label:
             pos:(50,950)
             text: depression_Q0
             md_bg_color:0,0,1,0.05
@@ -192,11 +190,11 @@
             # right_action_items: [["dots-vertical", lambda x: app.callback()], ["clock", lambda x: app.callback_2()]]
             elevation:8
 
-        MDLabel:
+        Label:
             text: 'Your score is:'
             halign: 'center'
 
-        MDLabel:
+        Label:
             id:score_label
             text: ''
             halign: 'center'
@@ -228,7 +226,7 @@
             on_release:root.arrow_right()
 
 
-        MDLabel:
+        Label:
             size_hint_y:0.7
 
 
