--- a/layout_files/Landing.kv
+++ b/layout_files/Landing.kv
@@ -73,8 +73,8 @@
         content_drawer:content_drawer
         ScreenManager:
 
-            MDScreen:
-                MDBoxLayout:
+            Screen:
+                BoxLayout:
                     orientation: 'vertical'
 
                     MDTopAppBar:
