--- a/layout_files/Location.kv
+++ b/layout_files/Location.kv
@@ -9,7 +9,7 @@
             right_action_items: [["dots-vertical", lambda x:app.show_theme_picker()],["help", lambda x: app.callback_2()]]
             elevation:8
 
-        MDLabel:
+        Label:
             text:'Please select the category that you think best describes the community where you live:'
             pos_hint:{'center_x': 0.5, 'center_y': 0.5}
             size_hint_x:0.9
