--- a/layout_files/Login.kv
+++ b/layout_files/Login.kv
@@ -10,7 +10,7 @@
         Widget:
             size_hint_y:0.2
 
-        MDBoxLayout:
+        BoxLayout:
             orientation:'horizontal'
             size_hint_y:0.15
             Widget:
@@ -31,7 +31,7 @@
         Widget:
             size_hint_y:0.1
 
-        MDBoxLayout:
+        BoxLayout:
             orientation:'horizontal'
             size_hint_y:0.15
             Widget:
@@ -54,7 +54,7 @@
 
         Widget:
             size_hint_y:0.3
-        MDBoxLayout:
+        BoxLayout:
             orientation:'horizontal'
             size_hint_y:0.15
             Widget:
@@ -68,7 +68,7 @@
         Widget:
             size_hint_y:0.05
 
-        MDBoxLayout:
+        BoxLayout:
             orientation:'horizontal'
             size_hint_y:0.15
             Widget:
