--- a/layout_files/Alcohol.kv
+++ b/layout_files/Alcohol.kv
@@ -19,17 +19,17 @@
 			# right_action_items: [["dots-vertical", lambda x: app.callback()], ["clock", lambda x: app.callback_2()]]
 			elevation:8
 
-		MDLabel:
+		Label:
 			text:''
 			size_hint_y:0.3
-		MDLabel:
+		Label:
 			text: alcohol_landing_blurb
 			font_size:'14sp'
 			halign: 'left'
 			size_hint_x:0.8
 			pos_hint:{'center_x':0.5}
 
-		MDLabel:
+		Label:
 			# font_size:'2xw0sp'
 			text: alcohol_landing_subtitle
 			# text_color:DARK_BLUE
@@ -45,7 +45,7 @@
 			# size_hint_x:0.7
 			pos_hint:{'center_x':0.5}
 			on_release:
-				root.parent.ids['AlcoholUsagePage'].ids['android_tabs'].switch_tab('1')
+				# root.parent.ids['AlcoholUsagePage'].ids['android_tabs'].switch_tab('1')
 				root.arrow_right()
 
 
@@ -60,7 +60,7 @@
 				size_hint_x:1
 				text:'                     >                       '
 				on_release:
-					root.parent.ids['AlcoholUsagePage'].ids['android_tabs'].switch_tab('1')
+					# root.parent.ids['AlcoholUsagePage'].ids['android_tabs'].switch_tab('1')
 					root.arrow_right()
 
 <AlcoholUsagePage>:
@@ -71,48 +71,48 @@
 			left_action_items: [["chevron-left", lambda x: root.chevron_left()]]
 			right_action_items: [["dots-vertical", lambda x:app.show_theme_picker()],["help", lambda x: root.tap_target_start()]]
 			elevation:8
-		# MDLabel:
+		# Label:
 		# 	text:''
 
-		MDBoxLayout:
-			size_hint_y:0.7
+		# BoxLayout:
+		# 	size_hint_y:0.7
 
-			MDTabs:
-				id: android_tabs
-				tab_pos:'left_top'
-				on_tab_switch: root.on_tab_switch(*args)
+			# MDTabs:
+			# 	id: android_tabs
+			# 	tab_pos:'left_top'
+			# 	on_tab_switch: root.on_tab_switch(*args)
 
-				Tab:
-					icon:'blank'
-					text:'1'
-					MDBoxLayout:
-						orientation:'vertical'
+			# 	Tab:
+			# 		icon:'blank'
+			# 		text:'1'
+			# 		BoxLayout:
+			# 			orientation:'vertical'
 
-						MDLabel:
-							text: alcohol_Q1
-							halign: 'center'
-							size_hint_x:0.9
+			# 			Label:
+			# 				text: alcohol_Q1
+			# 				halign: 'center'
+			# 				size_hint_x:0.9
 
-				Tab:
-					icon:'blank'
-					text:'2'
-					MDBoxLayout:
-						orientation:'vertical'
-						MDLabel:
-							text: alcohol_Q2
-							halign: 'center'
-							size_hint_x:0.9
-				Tab:
-					icon:'blank'
-					text:'3'
-					MDBoxLayout:
-						orientation:'vertical'
-						MDLabel:
-							text: alcohol_Q3
-							halign: 'center'
-							size_hint_x:0.9
+			# 	Tab:
+			# 		icon:'blank'
+			# 		text:'2'
+			# 		BoxLayout:
+			# 			orientation:'vertical'
+			# 			Label:
+			# 				text: alcohol_Q2
+			# 				halign: 'center'
+			# 				size_hint_x:0.9
+			# 	Tab:
+			# 		icon:'blank'
+			# 		text:'3'
+			# 		BoxLayout:
+			# 			orientation:'vertical'
+			# 			Label:
+			# 				text: alcohol_Q3
+			# 				halign: 'center'
+			# 				size_hint_x:0.9
 
-		MDBoxLayout:
+		BoxLayout:
 		    orientation:'vertical'
 		    Button:
 		        # id:button7
@@ -127,7 +127,7 @@
 
 		        on_release:
 		            root.button_press(7)
-		    MDLabel:
+		    Label:
 		        text:''
 		        size_hint_y:0.05
 		    Button:
@@ -141,7 +141,7 @@
 		        pos_hint:{'center_x':0.5}
 		        on_release: root.button_press(6)
 		        custom_color: 0, 1, 0, 1
-		    MDLabel:
+		    Label:
 		        text:''
 		        size_hint_y:0.05
 		    Button:
@@ -154,7 +154,7 @@
 		        # size_hint_y:0.8
 		        pos_hint:{'center_x':0.5}
 		        on_release: root.button_press(5)
-		    MDLabel:
+		    Label:
 		        text:''
 		        size_hint_y:0.05
 		    Button:
@@ -166,7 +166,7 @@
 		        font_style:'Button'
 		        pos_hint:{'center_x':0.5}
 		        on_release: root.button_press(4)
-		    MDLabel:
+		    Label:
 		        text:''
 		        size_hint_y:0.05
 		    Button:
@@ -178,7 +178,7 @@
 		        font_style:'Button'
 		        pos_hint:{'center_x':0.5}
 		        on_release: root.button_press(3)
-		    MDLabel:
+		    Label:
 		        text:''
 		        size_hint_y:0.05
 		    Button:
@@ -190,7 +190,7 @@
 		        font_style:'Button'
 		        pos_hint:{'center_x':0.5}
 		        on_release: root.button_press(2)
-		    MDLabel:
+		    Label:
 		        text:''
 		        size_hint_y:0.05
 		    Button:
@@ -217,7 +217,7 @@
 
 	FloatLayout:
 	    orientation: 'vertical'
-	    MDLabel:
+	    Label:
 	        pos:(50,950)
 	        text: ''
 	        # md_bg_color:0,0,1,0.05
@@ -237,11 +237,11 @@
             # right_action_items: [["dots-vertical", lambda x: app.callback()], ["clock", lambda x: app.callback_2()]]
             elevation:8
 
-        MDLabel:
+        Label:
             text: 'Your score is:'
             halign: 'center'
 
-        MDLabel:
+        Label:
             id:score_label
             text: ''
             halign: 'center'
@@ -273,7 +273,7 @@
             on_release:root.arrow_right()
 
 
-        MDLabel:
+        Label:
             size_hint_y:0.7
 
 
