--- a/layout_files/DietAndFood.kv
+++ b/layout_files/DietAndFood.kv
@@ -39,7 +39,7 @@
 
         Widget:
             size_hint_y:0.3
-        MDLabel:
+        Label:
             text: diet_landing_blurb
 
             font_size:'14sp'
@@ -47,7 +47,7 @@
             size_hint_x:0.8
             pos_hint:{'center_x':0.5}
 
-        MDLabel:
+        Label:
             # font_size:'2xw0sp'
             text: diet_landing_subtitle
             # text_color:DARK_BLUE
@@ -65,7 +65,7 @@
             on_release:
                 root.manager.current='DietAndFoodPage'
                 root.manager.transition.direction="left"
-                root.parent.ids['DietAndFoodPage'].ids['android_tabs'].switch_tab('1')
+                # root.parent.ids['DietAndFoodPage'].ids['android_tabs'].switch_tab('1')
 
 
         BoxLayout:
@@ -79,7 +79,7 @@
                 size_hint_x:1
                 text:'                     >                       '
                 on_release:
-                    root.parent.ids['DietAndFoodPage'].ids['android_tabs'].switch_tab('1')
+                    # root.parent.ids['DietAndFoodPage'].ids['android_tabs'].switch_tab('1')
                     root.arrow_right()
 
 
@@ -95,116 +95,116 @@
             # right_action_items: [["dots-vertical", lambda x: app.callback()], ["clock", lambda x: app.callback_2()]]
             elevation:8
 
-        MDBoxLayout:
-            size_hint_y:0.7
+        # BoxLayout:
+        #     size_hint_y:0.7
 
-            MDTabs:
-                id: android_tabs
-                tab_pos:'left_top'
-                on_tab_switch: root.on_tab_switch(*args)
+            # # MDTabs:
+            #     id: android_tabs
+            #     tab_pos:'left_top'
+            #     on_tab_switch: root.on_tab_switch(*args)
 
-                Tab:
-                    icon:'blank'
-                    text:'1'
-                    MDBoxLayout:
-                        orientation:'vertical'
+            #     Tab:
+            #         icon:'blank'
+            #         text:'1'
+            #         BoxLayout:
+            #             orientation:'vertical'
 
-                        MDLabel:
-                            text: diet_Q1
-                            halign: 'center'
-                            size_hint_x:0.9
+            #             Label:
+            #                 text: diet_Q1
+            #                 halign: 'center'
+            #                 size_hint_x:0.9
 
-                Tab:
-                    icon:'blank'
-                    text:'2'
-                    MDBoxLayout:
-                        orientation:'vertical'
-                        MDLabel:
-                            text: diet_Q2
-                            halign: 'center'
-                            size_hint_x:0.9
-                Tab:
-                    icon:'blank'
-                    text:'3'
-                    MDBoxLayout:
-                        orientation:'vertical'
-                        MDLabel:
-                            text: diet_Q3
-                            halign: 'center'
-                            size_hint_x:0.9
-                Tab:
-                    icon:'blank'
-                    text:'4'
-                    MDBoxLayout:
-                        orientation:'vertical'
-                        MDLabel:
-                            text: diet_Q4
-                            halign: 'center'
-                            size_hint_x:0.9
-                Tab:
-                    icon:'blank'
-                    text:'5'
-                    MDBoxLayout:
-                        orientation:'vertical'
-                        MDLabel:
-                            text: diet_Q5
-                            halign: 'center'
-                            size_hint_x:0.9
-                Tab:
-                    icon:'blank'
-                    text:'6'
-                    MDBoxLayout:
-                        orientation:'vertical'
-                        MDLabel:
-                            text: diet_Q6
-                            halign: 'center'
-                            size_hint_x:0.9
-                Tab:
-                    icon:'blank'
-                    text:'7'
-                    MDBoxLayout:
-                        orientation:'vertical'
-                        MDLabel:
-                            text: diet_Q7
-                            halign: 'center'
-                            size_hint_x:0.9
+            #     Tab:
+            #         icon:'blank'
+            #         text:'2'
+            #         BoxLayout:
+            #             orientation:'vertical'
+            #             Label:
+            #                 text: diet_Q2
+            #                 halign: 'center'
+            #                 size_hint_x:0.9
+            #     Tab:
+            #         icon:'blank'
+            #         text:'3'
+            #         BoxLayout:
+            #             orientation:'vertical'
+            #             Label:
+            #                 text: diet_Q3
+            #                 halign: 'center'
+            #                 size_hint_x:0.9
+            #     Tab:
+            #         icon:'blank'
+            #         text:'4'
+            #         BoxLayout:
+            #             orientation:'vertical'
+            #             Label:
+            #                 text: diet_Q4
+            #                 halign: 'center'
+            #                 size_hint_x:0.9
+            #     Tab:
+            #         icon:'blank'
+            #         text:'5'
+            #         BoxLayout:
+            #             orientation:'vertical'
+            #             Label:
+            #                 text: diet_Q5
+            #                 halign: 'center'
+            #                 size_hint_x:0.9
+            #     Tab:
+            #         icon:'blank'
+            #         text:'6'
+            #         BoxLayout:
+            #             orientation:'vertical'
+            #             Label:
+            #                 text: diet_Q6
+            #                 halign: 'center'
+            #                 size_hint_x:0.9
+            #     Tab:
+            #         icon:'blank'
+            #         text:'7'
+            #         BoxLayout:
+            #             orientation:'vertical'
+            #             Label:
+            #                 text: diet_Q7
+            #                 halign: 'center'
+            #                 size_hint_x:0.9
 
-                Tab:
-                    icon:'blank'
-                    text:'8'
-                    MDBoxLayout:
-                        orientation:'vertical'
-                        MDLabel:
-                            text: diet_Q8
-                            halign: 'center'
-                            size_hint_x:0.9
-                Tab:
-                    icon:'blank'
-                    text:'9'
-                    MDBoxLayout:
-                        orientation:'vertical'
-                        MDLabel:
-                            text: diet_Q9
-                            halign: 'center'
-                            size_hint_x:0.9
-                Tab:
-                    icon:'blank'
-                    text:'10'
-                    MDBoxLayout:
-                        orientation:'vertical'
-                        MDLabel:
-                            text: diet_Q10
-                            halign: 'center'
-                            size_hint_x:0.9
-                Tab:
-                    icon:'blank'
-                    text:'11'
-                    MDBoxLayout:
-                        orientation:'vertical'
-                        MDLabel:
-                            text: diet_Q11
-                            halign: 'center'
-                            size_hint_x:0.9
+            #     Tab:
+            #         icon:'blank'
+            #         text:'8'
+            #         BoxLayout:
+            #             orientation:'vertical'
+            #             Label:
+            #                 text: diet_Q8
+            #                 halign: 'center'
+            #                 size_hint_x:0.9
+            #     Tab:
+            #         icon:'blank'
+            #         text:'9'
+            #         BoxLayout:
+            #             orientation:'vertical'
+            #             Label:
+            #                 text: diet_Q9
+            #                 halign: 'center'
+            #                 size_hint_x:0.9
+            #     Tab:
+            #         icon:'blank'
+            #         text:'10'
+            #         BoxLayout:
+            #             orientation:'vertical'
+            #             Label:
+            #                 text: diet_Q10
+            #                 halign: 'center'
+            #                 size_hint_x:0.9
+            #     Tab:
+            #         icon:'blank'
+            #         text:'11'
+            #         BoxLayout:
+            #             orientation:'vertical'
+            #             Label:
+            #                 text: diet_Q11
+            #                 halign: 'center'
+            #                 size_hint_x:0.9
 
         MDGridLayout:
             cols:3
@@ -229,7 +229,7 @@
 
     FloatLayout:
         orientation: 'vertical'
-        MDLabel:
+        Label:
             pos:(50,950)
             text: diet_Q0
             # md_bg_color:0,0,1,0.05
@@ -239,11 +239,11 @@
 
 
 <Template>:
-    MDLabel:
+    Label:
         text: 'Your score is:'
         halign: 'center'
 
-    MDLabel:
+    Label:
         id:score_label
         text: ''
         halign: 'center'
@@ -275,7 +275,7 @@
         on_release:root.arrow_right()
 
 
-    MDLabel:
+    Label:
         size_hint_y:0.7
 
 <DietScorePage>:
@@ -290,11 +290,11 @@
             # right_action_items: [["dots-vertical", lambda x: app.callback()], ["clock", lambda x: app.callback_2()]]
             elevation:8
 
-        MDLabel:
+        Label:
             text: 'Your score is:'
             halign: 'center'
 
-        MDLabel:
+        Label:
             id:score_label
             text: ''
             halign: 'center'
@@ -326,7 +326,7 @@
             on_release:root.arrow_right()
 
 
-        MDLabel:
+        Label:
             size_hint_y:0.7
 
 
