--- a/layout_files/TraumaticBrainInjury.kv
+++ b/layout_files/TraumaticBrainInjury.kv
@@ -22,17 +22,17 @@
             # right_action_items: [["dots-vertical", lambda x: app.callback()], ["clock", lambda x: app.callback_2()]]
             elevation:8
 
-        MDLabel:
+        Label:
             text:''
             size_hint_y:0.3
-        MDLabel:
+        Label:
             text: trauma_landing_blurb
             font_size:'14sp'
             halign: 'left'
             size_hint_x:0.8
             pos_hint:{'center_x':0.5}
 
-        MDLabel:
+        Label:
             # font_size:'2xw0sp'
             text: trauma_landing_subtitle
             # text_color:DARK_BLUE
@@ -48,7 +48,7 @@
             # size_hint_x:0.7
             pos_hint:{'center_x':0.5}
             on_release:
-                root.parent.ids['TraumaticBrainInjuryPage'].ids['android_tabs'].switch_tab('1')
+                # root.parent.ids['TraumaticBrainInjuryPage'].ids['android_tabs'].switch_tab('1')
                 root.arrow_right()
 
 
@@ -63,7 +63,7 @@
                 size_hint_x:1
                 text:'                     >                       '
                 on_release:
-                    root.parent.ids['TraumaticBrainInjuryPage'].ids['android_tabs'].switch_tab('1')
+                    # root.parent.ids['TraumaticBrainInjuryPage'].ids['android_tabs'].switch_tab('1')
                     root.arrow_right()
 
 
@@ -75,64 +75,64 @@
             left_action_items: [["chevron-left", lambda x: root.chevron_left()]]
             right_action_items: [["dots-vertical", lambda x:app.show_theme_picker()],["help", lambda x: root.tap_target_start()]]
             elevation:8
-        MDBoxLayout:
-            size_hint_y:0.7
+        # BoxLayout:
+        #     size_hint_y:0.7
 
-            MDTabs:
-                id: android_tabs
-                tab_pos:'left_top'
-                on_tab_switch: root.on_tab_switch(*args)
+            # MDTabs:
+            #     id: android_tabs
+            #     tab_pos:'left_top'
+            #     on_tab_switch: root.on_tab_switch(*args)
 
-                Tab:
-                    icon:'blank'
-                    text:'1'
-                    MDBoxLayout:
-                        orientation:'vertical'
+            #     Tab:
+            #         icon:'blank'
+            #         text:'1'
+            #         BoxLayout:
+            #             orientation:'vertical'
 
-                        MDLabel:
-                            text: trauma_Q1
-                            halign: 'left'
-                            size_hint_x:1
+            #             Label:
+            #                 text: trauma_Q1
+            #                 halign: 'left'
+            #                 size_hint_x:1
 
-                Tab:
-                    icon:'blank'
-                    text:'2'
-                    MDBoxLayout:
-                        orientation:'vertical'
-                        MDLabel:
-                            text: trauma_Q2
-                            halign: 'center'
-                            size_hint_x:0.9
-                Tab:
-                    icon:'blank'
-                    text:'3'
-                    MDBoxLayout:
-                        orientation:'vertical'
-                        MDLabel:
-                            text: trauma_Q3
-                            halign: 'left'
-                            size_hint_x:1
+            #     Tab:
+            #         icon:'blank'
+            #         text:'2'
+            #         BoxLayout:
+            #             orientation:'vertical'
+            #             Label:
+            #                 text: trauma_Q2
+            #                 halign: 'center'
+            #                 size_hint_x:0.9
+            #     Tab:
+            #         icon:'blank'
+            #         text:'3'
+            #         BoxLayout:
+            #             orientation:'vertical'
+            #             Label:
+            #                 text: trauma_Q3
+            #                 halign: 'left'
+            #                 size_hint_x:1
 
-                Tab:
-                    icon:'blank'
-                    text:'4'
-                    MDBoxLayout:
-                        orientation:'vertical'
-                        MDLabel:
-                            text: trauma_Q4
-                            halign: 'center'
-                            size_hint_x:0.9
-                Tab:
-                    icon:'blank'
-                    text:'5'
-                    MDBoxLayout:
-                        orientation:'vertical'
-                        MDLabel:
-                            text: trauma_Q5
-                            halign: 'left'
-                            size_hint_x:1
+            #     Tab:
+            #         icon:'blank'
+            #         text:'4'
+            #         BoxLayout:
+            #             orientation:'vertical'
+            #             Label:
+            #                 text: trauma_Q4
+            #                 halign: 'center'
+            #                 size_hint_x:0.9
+            #     Tab:
+            #         icon:'blank'
+            #         text:'5'
+            #         BoxLayout:
+            #             orientation:'vertical'
+            #             Label:
+            #                 text: trauma_Q5
+            #                 halign: 'left'
+            #                 size_hint_x:1
 
-        MDBoxLayout:
+        BoxLayout:
             orientation:'horizontal'
             size_hint_y:0.5
             Widget:
@@ -177,11 +177,11 @@
             # right_action_items: [["dots-vertical", lambda x: app.callback()], ["clock", lambda x: app.callback_2()]]
             elevation:8
 
-        MDLabel:
+        Label:
             text: 'Your score is:'
             halign: 'center'
 
-        MDLabel:
+        Label:
             id:score_label
             text: ''
             halign: 'center'
@@ -213,7 +213,7 @@
             on_release:root.arrow_right()
 
 
-        MDLabel:
+        Label:
             size_hint_y:0.7
 
 
